--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,120 +1,9 @@
-
-/* Roots For Color and Fonts */
-
-:root {
-    /* Colors: */
-    --maincolor: lightblue;
-    --secondarycolor: rgb(55, 135, 254);
-    --tertiarycolor: #30AAD7;
-    --anchorcolor: cornflowerblue;
-    /* Fonts */
-    --mainfont: 'poppins';
-    /* --mainFont: 'Calibre'; */
-    /* --secondaryFont: "calluna"; */
-    /* --barlowFont: 'Barlow Condensed', sans-serif; */
-}
-
-/* *,
-*::before,
-*::after {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-html,
-body {
-    height: 100%;
-}
-
-ol,
-ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
-button,
-input,
-select,
-textarea,
-option {
-    background: none;
-    border: none;
-    outline: none;
-    box-shadow: none;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-    margin: 0;
-    padding: 0;
-}
-
-body {
-    font-size: 19px;
-    line-height: 23px;
-    letter-spacing: 0;
-    font-weight: 300;
-    font-family: var(--mainfont);
-    color: var(--black);
-} */
-
-
-
-/* h1,
-.h1 {
-    font-size: 56px;
-    line-height: 56px;
-    letter-spacing: -0.56px;
-    color: var(--whiteClr);
-    font-weight: 500;
-}
-
-h2,
-.h2 {
-    font-size: 35px;
-    letter-spacing: -0.35px;
-    line-height: 35px;
-    color: var(--whiteClr);
-    font-weight: 500;
-} */
-
-/* h1 span,
-.h1 span, */
-/* h2 span, */
-/* .h2 span {
-    font-family: var(--secondaryFont);
-    font-style: italic;
-    color: var(--sky-blue);
-    line-height: 0;
-} */
-
-/* h6,
-.h6 {
-    font-size: 25px;
-    line-height: 28px;
-    letter-spacing: -0.25px;
-    color: var(--whiteClr);
-} */
-
-/* root */
-
-
 /* header */
 
 
 /* header */
 
 /* footer style */
-footer {
-    background-color: var(--maincolor);
-}
 .copyright {
     text-align: center;
 }
@@ -444,7 +333,7 @@ a.backToTopBtn {
     position: fixed;
     bottom: 140px;
     right: 20px;
-    background-color: var(--anchorcolor);
+    background-color: var(--clr-tertiary);
     color: #fff;
     border: none;
     border-radius: 50%;
@@ -459,7 +348,7 @@ a.backToTopBtn {
     scroll-behavior: smooth;
   }
 a.backToTopBtn:hover,a.backToTopBtn:active {
-    background-color: var(--secondarycolor);
+    background-color: var(--clr-primary);
 }
 
 
@@ -468,7 +357,7 @@ a.backToTopBtn:hover,a.backToTopBtn:active {
 
 /* glide slider code */
 .glide__arrow{
-    background-color: skyblue;
+    background-color: var(--clr-secondary);
     color: white;
     border: 1px #7e7e7e solid;
     border-radius:5px;
@@ -499,7 +388,7 @@ position:absolute;
 left: 95%;
 } 
 .glide__arrow:hover{
-    background-color: white;
+    background-color: var(--clr-surface);
 }
 @media (max-width:800px) {
     .glide__arrow{
@@ -587,6 +476,9 @@ p.card-text {
 .home-page-step-number {
     font-size: 10rem;
 }
+.home-page-step-number span{
+    color: var(--clr-grey);
+}
 
 .home-page-step {
     position: relative;
@@ -649,7 +541,7 @@ p.card-text {
     width: 100%;
 } 
 .home-page-step{
-    border: 1px lightgrey solid;
+    border: 1px var(--clr-grey) solid;
     text-align: center;
 }
 }
@@ -671,7 +563,7 @@ div.home-page-get-started-form
     text-align: center;
     border: 2px #98e2ff solid;
     border-radius: 10px;
-    background: var(--maincolor);
+    background: var(--clr-secondary);
     padding: 42px;
     box-shadow: 0px 10px 50px hsla(240,7%,62%,1);
 }
@@ -698,7 +590,7 @@ div.home-page-get-started-form form
     background-color: white;
     background-clip: padding-box;
     appearance: none;
-    border: 1px solid lightgrey;
+    border: 1px var(--clr-grey) solid;
     border-radius:.375rem;
     transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
@@ -706,12 +598,6 @@ div.home-page-get-started-form form
     text-align: center;
 }
 .form-submit-button button {
-    background: rgb(74, 149, 247);
-    border-radius: 10px;
-    border: 0px black solid;
-    padding: 10px 50px;
-    color: white;
-    cursor: pointer;
     margin-block: 2rem;
 }
 /* get started section */
@@ -733,35 +619,7 @@ div.heading h1 {
 /* t and c */
 
 
-.container-fluid.header-contact-info {
-    display: flex;
-    justify-content: space-between;
-    padding-block: 5px;
-    border-bottom: 1px white solid;
-    background-color: var(--maincolor);
-    font-size: 15px;
-}
-@media (max-width :800px) {
-    .container-fluid.header-contact-info {
-        display: none;
-    }
-    
-}
-.header-phone > * {
-    margin-inline: 10px;
-}
 
-li.nav-item:last-child {
-    background-color:var(--tertiarycolor);
-    border-radius:10px;
-    padding-inline:10px;
-}
-@media (max-width:992px) {
-    li.nav-item:last-child {
-    width: 100%;
-    text-align: center;
-}
-}
 
 /* transformations page */
 
@@ -851,13 +709,6 @@ svg.svg-inline--fa.fa-phone, svg.svg-inline--fa.fa-whatsapp {
 /* faq page*/
 
 /* 404 page */
-
-.four0four-content a{
-    color:var(--clr-surface);
-    background-color: var(--clr-tertiary);
-    padding: 10px;
-    border-radius:25px;
-}
 section.four0four-section {
     text-align:center;
 }
@@ -1038,19 +889,251 @@ h1.plan-pricing-page-heading, p.plan-pricing-page-content {
     border-radius:10px;
     text-align: center;
 }
-.btn {
-    padding:0.75em 1.5em;
-    background-color: var(--clr-tertiary);
-    color: var(--clr-surface);
-    border:1px var(--clr-primary) solid;
-    border-radius: 0.3em;
-    
-}
-.btn:hover {
-    background-color: var(--clr-surface);
-    color: var(--clr-primary);    
-}
+
 .card-footer {
     margin-block: 2rem;
 }
 /* plans page */
+
+/* contact page */
+
+h1.contact-us-heading {
+    color: white;
+}
+
+.heading-contact-us {
+    background-image: url(/assets/images/for-contact.jpeg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: auto;
+    max-width: 100%;
+    min-height: 40vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.contact-us-container {
+    display: flex;
+    justify-content: center;
+    margin-block: 5rem;
+}
+
+.contact-us-container > div {
+    flex-basis: 0;
+    flex-grow: 1;
+}
+
+.contact-us-contact-details ul li {
+    margin-block: 1.5rem;
+}
+
+.contact-us-contact-details {
+    margin-left: 5rem;
+}
+
+.contact-us-section div.container {
+    margin-top: 5rem;
+}
+
+.contact-us-contact-details ul li:last-child a {
+    background-color: #55cb55;
+    color: white;
+    font-weight: 500;
+    padding-block: 2%;
+    padding-inline: 4%;
+    border-radius: 5px;
+}
+
+@media (max-width:800px) {
+    .contact-us-container {
+        flex-direction: column;
+        margin-block: unset;
+
+    }
+    .contact-us-container>div {
+        margin-block: 10%;
+    }
+
+    .contact-us-contact-details {
+        text-align: center;
+        margin-left: unset;
+    }
+}
+
+label.form-label {
+    display: inline-block;
+}
+
+.form-control {
+    display: block;
+    width: 100%;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: var(--clr-text);
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background-color: var(--clr-surface);
+    background-clip: padding-box;
+    border: 1px solid var(--clr-grey);
+    border-radius: 0.375rem;
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+    
+}
+
+/* contact page */
+
+/* faq page */
+
+/* faq page*/
+
+.heading-faq {
+    background-image: url(/assets/images/for-faq.jpg);
+    background-size:     cover;                    
+    background-repeat:   no-repeat;
+    background-position: top bottom;
+    height: 100%;
+    min-height: 60vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.heading-faq h1{
+    text-align: center;
+    color: white;
+}
+.content-faq{
+    padding: 50px 0px;
+}
+/* faq page*/
+.accordion-content {
+    display: grid;
+    grid-template-rows: 0fr;
+    transition: grid-template-rows 500ms;
+  }
+  .accordion-content[aria-hidden="false"] {
+    grid-template-rows: 1fr;
+  }
+  .accordion-content > div {
+    overflow: hidden;
+  }
+  .accordion-panel {
+    border-bottom: 0.06rem var(--clr-grey) solid;
+  }
+  [type=button]:not(:disabled), button:not(:disabled) {
+    cursor: pointer;
+}
+.accordion-content {
+    padding: 0rem 1.25rem;
+}
+.accordion-trigger[aria-expanded="true"] {
+    background-color: var(--clr-secondary);
+}
+  .accordion-trigger {
+    position: relative;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    padding: 1rem;
+    font-size: 1rem;
+    text-align: left;
+    color: black;
+    background-color: white;
+    border: 0;
+    border-radius: 0;
+    overflow-anchor: none;
+    transition: var(--bs-accordion-transition);
+}
+  .accordion-trigger::after {
+    flex-shrink: 0;
+    content: "";
+    width: 1.25rem;
+    height:1.25rem;
+    margin-left: auto;
+    background-image: url(/assets/images/plus-solid.svg);
+    background-repeat: no-repeat;
+    background-size: 1.25rem;
+    transition: transform 0.2s ease-in-out;
+  }
+
+.accordion-trigger[aria-expanded="true"]::after {
+    transform: rotate(135deg);
+}
+.faq-page-section{
+    margin-block: 3rem;
+}
+/* faq page */
+
+/* get started page */
+.get-started-heading{
+    text-align: center;
+}
+.get-started-container {
+    display:flex;
+    align-items: flex-start;
+    justify-content: space-evenly;
+}
+.get-started-contact-details ul li {
+    margin-block:2rem;
+}
+.get-started-contact-details ul li:nth-child(3) a{
+    border-radius: 5px;
+    background-color:#25d366;
+    color: white;
+    padding:10px;
+    font-weight: 500;
+}
+.get-started-contact-details ul li:nth-child(4) a{
+    border-radius: 5px;
+    background: linear-gradient(0.25turn,#f9ce34, #ee2a7b, #6228d7);
+    color: white;
+    padding:10px;
+    opacity: 80%;
+    font-weight: 500;
+}
+p.get-started-para {
+    text-align:center;
+}
+label.form-label {
+    display: inline-block;
+}
+
+.form-control {
+    display: block;
+    width: 100%;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: var(--clr-text);
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background-color: var(--clr-surface);
+    background-clip: padding-box;
+    border: 1px solid lightgrey;
+    border-radius: 0.375rem;
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+    
+}
+.form-text {
+    margin-top: 0.25rem;
+    font-size: .875em;
+    color: lightgrey;
+}
+
+@media (max-width:800px) {
+    .get-started-container {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+}
+/* https://65fa1ed5a552c70008ce545e--scott140507.netlify.app/get-started */
+
+
+/* get started page */
