--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -4,6 +4,7 @@
 
 :root {
     /* Colors: */
+    --clr-grey: #e9e9e9;
     --clr-text: hsl(204, 100%, 1%);
     --clr-surface:hsl(0,0%,100%);
     --clr-primary:#4498CE;
