--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,230 @@
+/* Roots For Color and Fonts */
+
+:root {
+    /* Colors: */
+    --clr-grey: #e9e9e9;
+    --clr-text: hsl(204, 100%, 1%);
+    --clr-surface:hsl(0,0%,100%);
+    --clr-primary:#4498CE;
+    --clr-secondary: #8BC9F1;
+    --clr-tertiary: #43B3FD;
+    /* https://www.realtimecolors.com/?colors=0f1316-f4f7fa-4498ce-8bc9f1-43b3fd&fonts=Poppins-Poppins */
+    /* Fonts */
+    --base-font: 'IBM Plex Sans', sans-serif;
+    --accent-font: 'IBM Plex Sans Condensed', sans-serif;
+
+    --font-size-300: clamp(1.125rem, 1.0815rem + 0.2174vi, 1.25rem);
+    --font-size-400: clamp(1.35rem, 1.2761rem + 0.3696vi, 1.5625rem);
+    --font-size-500: clamp(1.62rem, 1.5041rem + 0.5793vi, 1.9531rem);
+    --font-size-600: clamp(1.944rem, 1.771rem + 0.8651vi, 2.4414rem);
+    --font-size-700: clamp(2.3328rem, 2.0827rem + 1.2504vi, 3.0518rem);
+    --font-size-800: clamp(2.7994rem, 2.4462rem + 1.7658vi, 3.8147rem);
+}
+
+/* body{
+    background-color: hsl(208, 100%, 97%);
+} */
 /* header */
+
+.navbar-nav li{
+    padding:8px;
+    margin:5px 10px;
+}
+
+a.nav-link {
+    font-weight:500;
+}
+/* a.nav-link:hover, a.nav-link:active {
+    transform: translate(-2.1rem, -2ex);
+} */
+.header {
+    position: sticky;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1;
+  }
+  /* @supports(position: sticky){
+    .header {
+        position: sticky;
+      }
+  } */
+.header-logo img {
+    vertical-align: middle;
+    margin-block: 8px;
+}
+@media (max-width:1100px) {
+    a.nav-link{
+    font-size: 18px;
+    }
+    .navbar-nav li{
+        padding:8px;
+        margin:5px 5px;
+    }
+}
+@media (min-width: 992px){
+.navbar-toggler {
+    display: none;
+}
+}
+.navbar-toggler:focus {
+    text-decoration: none;
+    outline: 0;
+    /* box-shadow: 0 0 0 var(--bs-navbar-toggler-focus-width); */
+}
+@media (max-width: 992px) {
+.collapse:not(.show) {
+    display: none;
+}
+}
+
+.navbar-toggler-icon {
+    display: inline-block;
+    width: 2em;
+    height: 2em;
+    vertical-align: middle;
+    background-image: url(/assets/images/hamburger.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100%;
+}
+.navbar-toggler-icon.show {
+        background-image: url(/assets/images/hamburger-close.svg);
+    }
+
+.navbar .container-fluid{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+}
+ .navbar-nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.navbar-collapse{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}.container-fluid.header-contact-info {
+    display: flex;
+    justify-content: space-between;
+    padding-block: 5px;
+    border-bottom: 1px white solid;
+    font-size: 15px;
+}
+@media (max-width :800px) {
+    .container-fluid.header-contact-info {
+        display: none;
+    }
+    
+}
+.header-phone > * {
+    margin-inline: 10px;
+}
+
+li.nav-item:last-child {
+    background-color:var(--clr-tertiary);
+    border-radius:10px;
+    padding-inline:10px;
+}
+li.nav-item:last-child:hover {
+    background-color:var(--clr-primary);
+}
+@media (max-width:992px) {
+    li.nav-item:last-child {
+    width: 100%;
+    text-align: center;
+}
+}
+@media (max-width: 992px) {
+    button#navbar-toggler {
+        border: 1px black solid;
+        padding: 5px 9px;
+    }
+    .navbar-nav {
+        flex-direction: column;
+        justify-content:flex-end;
+        align-items:self-start;
+        width: 100%;
+    }
+    .navbar-collapse{
+        flex-grow: 1;
+        flex-basis: 100%;
+    }
+    ul.navbar-nav li:not(:last-child) {
+        border-bottom:1px white solid;
+        width: 100%;
+    }
+}
+@media (min-width: 576px) {
+
+    .container,
+    .container-sm {
+        max-width: 540px;
+    }
+}
+
+@media (min-width: 768px) {
+
+    .container,
+    .container-md,
+    .container-sm {
+        max-width: 720px;
+    }
+}
+
+@media (min-width: 992px) {
+
+    .container,
+    .container-lg,
+    .container-md,
+    .container-sm {
+        max-width: 960px;
+    }
+}
+
+@media (min-width: 1200px) {
+
+    .container,
+    .container-lg,
+    .container-md,
+    .container-sm,
+    .container-xl {
+        max-width: 1140px;
+    }
+}
+
+@media (min-width: 1400px) {
+
+    .container,
+    .container-lg,
+    .container-md,
+    .container-sm,
+    .container-xl,
+    .container-xxl {
+        max-width: 1320px;
+    }
+}
+
+
+
+
+.container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
+    --bs-gutter-x: 1.5rem;
+    --bs-gutter-y: 0;
+    width: 100%;
+    padding-right: calc(var(--bs-gutter-x) * .5);
+    padding-left: calc(var(--bs-gutter-x) * .5);
+    margin-right: auto;
+    margin-left: auto;
+}
+
+svg.svg-inline--fa.fa-phone, svg.svg-inline--fa.fa-whatsapp {
+    width: 15px;
+    height: 15px;
+}
 
 
 /* header */
@@ -250,12 +476,16 @@ flex-basis: 100%;
 /* keyfigure section */
 
 section:first-of-type{
-    margin-bottom: 40px;
+    padding-bottom: 40px;
 }
 section + section{
-    margin-block: 50px;
-}
 
+    padding-block: 50px;
+}
+section:nth-child(even){
+    /* background-color: hsl(208, 100%, 94%); */
+    background-color: hsl(0, 0%, 95%);
+}
 
 /* faq section */
 .faq-row {
@@ -369,9 +599,9 @@ a.backToTopBtn:hover,a.backToTopBtn:active {
 h4.client-name {
     margin: 1rem 0;
 }
-.client-detail {
+/* .client-detail {
    background-color: hsl(0, 0%, 96%)
-}
+} */
 .glide__arrow{
     position: relative;
 }  
