--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,10 +4,10 @@
     /* Colors: */
     --clr-grey: #e9e9e9;
     --clr-text: hsl(204, 100%, 1%);
-    --clr-surface:hsl(0,0%,100%);
-    --clr-primary:#4498CE;
-    --clr-secondary: #8BC9F1;
-    --clr-tertiary: #43B3FD;
+    --clr-surface:#FBF3F8;
+    --clr-primary:#D6389B;
+    --clr-secondary: #ED7EC4;
+    --clr-tertiary: #F156B7; 
     /* https://www.realtimecolors.com/?colors=0f1316-f4f7fa-4498ce-8bc9f1-43b3fd&fonts=Poppins-Poppins */
     /* Fonts */
     --base-font: 'IBM Plex Sans', sans-serif;
@@ -21,9 +21,9 @@
     --font-size-800: clamp(2.7994rem, 2.4462rem + 1.7658vi, 3.8147rem);
 }
 
-/* body{
-    background-color: hsl(208, 100%, 97%);
-} */
+body{
+    background-color: var(--clr-surface);
+}
 /* header */
 
 .navbar-nav li{
@@ -482,10 +482,9 @@ section + section{
 
     padding-block: 50px;
 }
-section:nth-child(even){
-    /* background-color: hsl(208, 100%, 94%); */
+/* section:nth-child(even){
     background-color: hsl(0, 0%, 95%);
-}
+} */
 
 /* faq section */
 .faq-row {
