--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,10 +4,10 @@
     /* Colors: */
     --clr-grey: #e9e9e9;
     --clr-text: hsl(204, 100%, 1%);
-    --clr-surface:#FBF3F8;
-    --clr-primary:#D6389B;
-    --clr-secondary: #ED7EC4;
-    --clr-tertiary: #F156B7; 
+    --clr-surface:hsl(200, 50%, 97%);
+    --clr-primary:hsl(200, 66%, 53%);
+    --clr-secondary: hsl(200, 76%, 71%);
+    --clr-tertiary: hsl(200, 85%, 64%); 
     /* https://www.realtimecolors.com/?colors=0f1316-f4f7fa-4498ce-8bc9f1-43b3fd&fonts=Poppins-Poppins */
     /* Fonts */
     --base-font: 'IBM Plex Sans', sans-serif;
@@ -649,12 +649,6 @@ left: 95%;
 }
 /* glide slider code */
 
-
-
-
-#navbar .navbar-nav .nav-link {
-    color: white;
-}
 
 p.card-text {
     margin-bottom: 1.5rem;
