--- a/assets/css/base/base.css
+++ b/assets/css/base/base.css
@@ -257,29 +257,77 @@ a.anchor{
 }
 a.anchor:hover, a.anchor:focus{
     color: var(--clr-primary);
+    text-decoration: underline;
 }
-.header {
-    a {
+.header a {
          color: var(--clr-surface);
 } 
-}
-.footer{
-    a{
-        color: var(--clr-surface);
+/* .header a:hover {
+    text-decoration: underline;
+}  */
+@media (min-width:800px) {
+    .nav-link{
+        position: relative;
+    }
+    .nav-link::before {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        top: 1.25rem;
+        height: 2px;
+        background-color: var(--clr-surface);
+        transform: scaleX(0);
+        transform-origin: left;
+        transition: transform 250ms ease-in-out;
+    } 
+    .nav-link:hover::before {
+         transform: scaleX(1);
     }
 }
+ 
+.footer a{
+        color: var(--clr-surface);
+    }
 .btn {
+    /* display: inline-block; */
     padding:0.75em 1.5em;
     background-color: var(--clr-tertiary);
     color: var(--clr-surface);
     border:1px var(--clr-primary) solid;
     border-radius: 0.3em;
-    
+    transition: background-color 300ms ease-in-out, color 300ms ease-in-out;
+    /* transition: transform 200ms ease-in-out; */
 }
-.btn:hover {
+.btn:hover, a.btn:hover {
     background-color: var(--clr-surface);
     color: var(--clr-primary);    
+    /* transform: scale(1.05); */
 }
+/*
+.btn{
+    position: relative;
+    z-index: 0;
+    transition: color 300ms ease-in-out;
+}
+ .btn::before{
+    content: '';
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgb(27, 148, 246);
+    position: absolute;
+    z-index: -1;
+    transition: transform 200ms ease-in-out;
+    transform: scaleX(0);
+    transform-origin: left;
+}
+.btn:hover::before{
+    transform: scaleX(1);
+} */
+
 .btn-type-2 {
     padding:0.75em 1.5em;
     background-color: var(--clr-primary);
@@ -292,3 +340,12 @@ a.anchor:hover, a.anchor:focus{
     background-color: var(--clr-surface); 
     color:     var(--clr-primary);
 }
+::-moz-selection { /* Code for Firefox */
+    /* color: red; */
+    background: var(--clr-primary);
+  }
+  
+  ::selection {
+    color: var(--clr-surface);
+    background:var(--clr-primary);
+  }
