--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,9 +21,9 @@
     --font-size-800: clamp(2.7994rem, 2.4462rem + 1.7658vi, 3.8147rem);
 }
 
-body{
+/* body{
     background-color: var(--clr-surface);
-}
+} */
 /* header */
 
 .navbar-nav li{
