--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,8 @@
 
 :root {
     /* Colors: */
-    --clr-grey: #e9e9e9;
+    --clr-grey: hsl(0, 0%, 91%);
+    --clr-lightgrey: hsl(0, 0%, 97%);
     --clr-text: hsl(204, 100%, 1%);
     --clr-surface:hsl(200, 50%, 97%);
     --clr-primary:hsl(200, 66%, 53%);
@@ -78,7 +79,7 @@ a.nav-link {
 }
 }
 
-.navbar-toggler-icon {
+/* .navbar-toggler-icon {
     display: inline-block;
     width: 1.5em;
     height: 1.5em;
@@ -90,7 +91,43 @@ a.nav-link {
 }
 .navbar-toggler-icon.show {
         background-image: url(/assets/images/hamburger-close.svg);
-    }
+    } */
+    .hamburger {
+        display: block;
+        position: relative;
+      }
+      
+      .hamburger,
+      .hamburger::before,
+      .hamburger::after {
+        width: 2em;
+        height: 3px;
+        background:  black;
+        
+        transition: transform 350ms ease-in-out, opacity 200ms linear;
+      }
+      
+      .hamburger::before,
+      .hamburger::after {
+        content: '';
+        position: absolute;
+        left: 0;
+      }
+      
+      .hamburger::before { bottom: 6px; }
+      .hamburger::after { top: 6px;}
+      
+      .hamburger.show {
+        transform: rotate(45deg);
+      }
+      
+      .hamburger.show::before {
+        opacity: 0;
+      }
+      
+      .hamburger.show::after {
+        transform: rotate(90deg) translate(-6px);
+      }    
 
 .navbar .container-fluid{
     display: flex;
@@ -139,10 +176,10 @@ li.nav-item:last-child:hover {
 }
 }
 @media (max-width: 992px) {
-    button#navbar-toggler {
+    /* button#navbar-toggler {
         border: 1px black solid;
         padding: 5px 9px;
-    }
+    } */
     .navbar-nav {
         flex-direction: column;
         justify-content:flex-end;
@@ -422,6 +459,7 @@ ol.home-page-about-benefit li {
     justify-content: space-between;
     padding-inline: 5%;
     flex-wrap: wrap;
+    background-color: var(--clr-lightgrey);
 }
 .client-improvement{
 flex-grow: 1;
@@ -732,7 +770,7 @@ p.card-text {
 }
 .home-page-arrow-one img,
 .home-page-arrow-two img {
-    width: 10%;
+    width: 4rem;
 } 
 .home-page-arrow-one, .home-page-arrow-two {
     position: absolute;
@@ -854,6 +892,9 @@ div.heading h1 {
 }
 .gallery > * {
 flex-basis: 350px;
+border: 1px var(--clr-primary);
+border-style: solid dashed;
+border-radius: 5px;
 }
 .gallery-image img {
 object-fit: cover;
@@ -1138,13 +1179,13 @@ h1.contact-us-heading {
 
 .contact-us-container {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     margin-block: 5rem;
 }
 
 .contact-us-container > div {
-    flex-basis: 0;
-    flex-grow: 1;
+    flex-basis: 45%;
+    flex-grow: 0;
 }
 
 .contact-us-contact-details ul li {
@@ -1158,14 +1199,27 @@ h1.contact-us-heading {
 .contact-us-section div.container {
     margin-top: 5rem;
 }
-
-.contact-us-contact-details ul li:last-child a {
-    background-color: #55cb55;
-    color: white;
-    font-weight: 500;
-    padding-block: 2%;
-    padding-inline: 4%;
-    border-radius: 5px;
+.contact-us-contact-details svg, .get-started-contact-details svg {
+    width:1rem;
+    height:1rem;
+    vertical-align:middle;
+}
+ul.contact-us-social-links {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+   
+}
+ul.contact-us-social-links > * {
+flex-basis:12%;
+    flex-grow:0;
+}
+ul.contact-us-social-links svg{
+    width:2rem;
+    height:2rem;
+    border:1px black solid;
+    padding: 1px;
+    border-radius:0.375rem;
 }
 
 @media (max-width:800px) {
@@ -1181,6 +1235,10 @@ h1.contact-us-heading {
     .contact-us-contact-details {
         text-align: center;
         margin-left: unset;
+    }
+    ul.contact-us-social-links {
+justify-content: center;
+       
     }
 }
 
@@ -1199,7 +1257,7 @@ label.form-label {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-    background-color: var(--clr-surface);
+    /* background-color: var(--clr-surface); */
     background-clip: padding-box;
     border: 1px solid var(--clr-grey);
     border-radius: 0.375rem;
@@ -1301,7 +1359,11 @@ label.form-label {
 .get-started-container {
     display:flex;
     align-items: flex-start;
-    justify-content: space-evenly;
+    justify-content: space-between;
+}
+.get-started-container > * {
+flex-basis: 45%;
+flex-grow: 0;
 }
 .get-started-contact-details ul li {
     margin-block:2rem;
@@ -1339,9 +1401,9 @@ label.form-label {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-    background-color: var(--clr-surface);
+    /* background-color: var(--clr-surface); */
     background-clip: padding-box;
-    border: 1px solid lightgrey;
+    border: 1px solid var(--clr-grey);
     border-radius: 0.375rem;
     transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
     
@@ -1349,7 +1411,7 @@ label.form-label {
 .form-text {
     margin-top: 0.25rem;
     font-size: .875em;
-    color: lightgrey;
+    color: var(--clr-grey);
 }
 
 @media (max-width:800px) {
