--- a/assets/css/base/base.css
+++ b/assets/css/base/base.css
@@ -73,58 +73,21 @@ label {
 }
 
 /* FROM REMEDY CSS */
-/* h1 { font-size: 2rem; } */
-h1 {
-    font-size: clamp(2.75rem, 4.5vw, 4rem);
-    font-weight: 600;
-    /* margin-block: clamp(1.75rem, 3vw, 3rem); */
-    margin-block: 0.83em;
-}
-h2 {
-    font-size: 1.5rem;
-    font-weight: 500;
-    /* margin-block: 0.83em; */
-}
+h1 { font-size: 2rem; }
+h2 { font-size: 1.5rem; }
+h3 { font-size: 1.17rem; }
+h4 { font-size: 1.00rem; }
+h5 { font-size: 0.83rem; }
+h6 { font-size: 0.67rem; }
+h1 { margin: 0.67em 0; }
+p { font-size: 1.00rem; }
 
-h3 {
-    /* font-size: 1.17rem; */
-    font-size: clamp(1.5rem, 3vw, 2.5rem);
-    font-weight: 500;
-}
-
-h4 {
-    font-size: 1.25rem;
-    font-weight: 500;
-}
-
-h5 {
-    font-size: 0.83rem;
-}
-
-h6 {
-    font-size: 0.67rem;
-}
-p{
-    font-size: 1rem;
-    padding-block: 1em;
-}
 /**
  * Correct the font size and margin on `h1` elements within `section` and
  * `article` contexts in Chrome, Edge, Firefox, and Safari.
  */
 
- h1 {
-    /* font-size: 2em; */
-    font-size: clamp(2.75rem, 4.5vw, 4rem);
-  }
-  h2 {
-    font-size: clamp(1.75rem, 3.5vw, 3rem);
-    font-weight: 500;
-  }
-  h3s {
-    font-size: clamp(1.5rem, 3vw, 2.5rem);
-    font-weight: 500;
-  }
+
   
 /* FROM REMEDY CSS */
 
