--- a/assets/css/base/base.css
+++ b/assets/css/base/base.css
@@ -76,7 +76,7 @@ h1 {
     font-size: clamp(2.75rem, 4.5vw, 4rem);
     font-weight: 600;
     /* margin-block: clamp(1.75rem, 3vw, 3rem); */
-    margin-block: 0.83em;
+    /* margin-block: 0.83em; */
 }
 h2 {
     font-size: 1.5rem;
@@ -104,7 +104,42 @@ h6 {
 }
 p{
     font-size: 1rem;
-    padding-block: 1em;
+    /* padding-block: 1em; */
+}
+
+h1 {
+    font-size: var(--step-5);
+    margin-block: var(--step-5);
+}
+
+h2 {
+    font-size: var(--step-4);
+    margin-block: var(--step-4);
+}
+
+h3 {
+    font-size: var(--step-3);
+    margin-block: var(--step-3);
+}
+
+h4 {
+    font-size: var(--step-2);
+    margin-block: var(--step-2);
+}
+
+h5 {
+    font-size: var(--step-1);
+    margin-block: var(--step-1);
+}
+
+h6 {
+    font-size: var(--step-0);
+    margin-block: var(--step-0);
+}
+
+p {
+    font-size: var(--step--1);
+    margin-block: var(--fluid-16-16);
 }
 
 /* FROM REMEDY CSS */
