--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,12 +4,13 @@
     /* Colors: */
     --clr-white: hsl(0, 0%, 100%);
     --clr-grey: hsl(0, 0%, 91%);
+    --clr-darkgrey: hsl(204, 2%, 48%);
     --clr-lightgrey: hsl(0, 0%, 97%);
     --clr-text: hsl(204, 100%, 1%);
     --clr-surface:hsl(200, 50%, 97%);
     --clr-primary:hsl(200, 66%, 53%);
     --clr-secondary: hsl(200, 76%, 71%);
-    --clr-tertiary: hsl(200, 85%, 64%); 
+    --clr-tertiary: hsl(200, 85%, 64%);
     /* https://www.realtimecolors.com/?colors=0f1316-f4f7fa-4498ce-8bc9f1-43b3fd&fonts=Poppins-Poppins */
     /* Fonts */
     --base-font: 'IBM Plex Sans', sans-serif;
@@ -150,8 +151,8 @@ a.nav-link {
     position: absolute;
     left: 0;
     }
-    .hamburger::before { 
-        bottom: 8px; 
+    .hamburger::before {
+        bottom: 8px;
     }
     .hamburger::after {
          top: 8px;
@@ -162,10 +163,10 @@ a.nav-link {
     .hamburger.show::before {
     opacity: 0;
     }
-    
+
     .hamburger.show::after {
     transform: rotate(90deg) translate(-8px);
-    }    
+    }
 
 
 /* advance hamburger */
@@ -221,13 +222,13 @@ div#navbar-collapse::before {
     z-index: -1;
 }
     .navbar-collapse.show{
-        
+
         transform:translatey(0);
         }
         .navbar-collapse{
-            
+
             transform:translatey(20px);
-            
+
             transition: transform 600ms cubic-bezier(.4,0,.2,1);
         }
         .collapse:has(.show) {
@@ -249,7 +250,7 @@ div#navbar-collapse::before {
     .container-fluid.header-contact-info {
         display: none;
     }
-    
+
 }
 @media (max-width :1000px) {
 .collapse:has(.show) {
@@ -377,18 +378,20 @@ svg.svg-inline--fa.fa-phone, svg.svg-inline--fa.fa-whatsapp {
 @media (max-width: 800px) {
     .home-page-welcome-section{
         position: relative;
-        color: white;
+        /* color: white; */
     }
     .home-page-welcome-section::before {
         content: '';
         position: absolute;
         inset: 0;
-    background-image:url(/assets/images/valery-sysoev-LDAirERNzew-unsplash.webp);
+    /* background-image:url(/assets/images/valery-sysoev-LDAirERNzew-unsplash.webp); */
+    background-image:url(/assets/images/pexels-henry-&-co-1939485.jpg);
+    /* background-image:url(/assets/images/pexels-pixabay-260352.jpg); */
     background-repeat: no-repeat;
     background-position: top center;
     background-size: cover;
     z-index: -1;
-    opacity: 1;
+    opacity: 0.5;
 
 }
 }
@@ -407,7 +410,7 @@ svg.svg-inline--fa.fa-phone, svg.svg-inline--fa.fa-whatsapp {
 .footer-wrapper {
     display: flex;
     justify-content: space-between;
-    
+
 }
 .footer-wrapper{
 padding-block: 5rem;
@@ -446,6 +449,19 @@ padding-block: 5rem;
 /* footer style */
 
 /* home page start */
+.container > h2{
+    text-align: center;
+}
+/* intro section */
+section#welcome_section {
+    padding-top: 2rem;
+}
+.home-page-welcome-quote span {
+    letter-spacing:-0.04em;
+}
+.home-page-intro{
+    color: var(--clr-darkgrey);
+}
 .home-page-welcome-image img{
     /* height: 70vh; */
     text-align: center;
@@ -619,7 +635,7 @@ flex-basis: 100%;
     flex-basis: 0;
     flex-grow: 1;
     /* flex: 1; */
-} 
+}
 .keyfigure-features-box{
     display: flex;
     justify-content: space-evenly;
@@ -645,9 +661,9 @@ section + section{
 
     padding-block: 50px;
 }
-/* section:nth-child(even){
-    background-color: hsl(0, 0%, 95%);
-} */
+section:nth-child(even){
+    background-color: hsl(199, 96%, 97%);
+}
 
 /* faq section */
 .faq-row {
@@ -710,7 +726,7 @@ h2.faq-heading {
     .single-accordion{
         display:flex;
         flex-direction:column;
-        
+
     }
 }
 .accordion-collapse{
@@ -766,7 +782,7 @@ h4.client-name {
 } */
 .glide__arrow{
     position: relative;
-}  
+}
 .glide__arrow {
     bottom: 103%;
 }
@@ -777,14 +793,14 @@ left: 90%;;
 .glide__arrow--right{
 position:absolute;
 left: 95%;
-} 
+}
 .glide__arrow:hover{
     background-color: var(--clr-surface);
 }
 @media (max-width:800px) {
     .glide__arrow{
         display: none;
-    } 
+    }
 }
 
 .slider__bullets {
@@ -822,7 +838,7 @@ p.card-text {
 
 /* How can i Help */
  .home-page-how-can-i-help-main-div{
-    display: flex; 
+    display: flex;
     flex-wrap: wrap;
     justify-content: center;
 }
@@ -849,7 +865,7 @@ p.card-text {
     .home-page-how-can-i-help-card{
         flex: 50%;
     }
-} 
+}
 /* How can i Help */
 
 
@@ -896,14 +912,14 @@ p.card-text {
 .home-page-arrow-one img,
 .home-page-arrow-two img {
     width: 4rem;
-} 
+}
 .home-page-arrow-one, .home-page-arrow-two {
     position: absolute;
-} 
+}
 .home-page-arrow-one {
     top:40%;
     left:30%
-} 
+}
 .home-page-arrow-two {
     top:71%;
     left:65%
@@ -920,11 +936,11 @@ p.card-text {
         border: unset;
         margin-inline: auto;
         max-width: 22%;
-    } 
+    }
     .home-page-arrow-one img,
 .home-page-arrow-two img {
     width: 100%;
-} 
+}
 .home-page-step{
     border: 1px var(--clr-grey) solid;
     text-align: center;
@@ -1036,7 +1052,7 @@ text-align:center;
 /* our services program */
 .services{
     display: flex;
-    gap: 5%;
+    gap: 2rem;
     justify-content: space-evenly;
     text-align: center;
 }
@@ -1048,6 +1064,8 @@ text-align:center;
 }
 .ind-services {
    margin-bottom:2rem;
+   background-color: hsl(197.14deg 100% 87.53%);
+   padding: 1rem;
 }
 
 @media (max-width:800px) {
@@ -1069,7 +1087,7 @@ svg.svg-inline--fa.fa-phone, svg.svg-inline--fa.fa-whatsapp {
 
 .heading-faq {
     background-image: url(/assets/images/for-faq.jpg);
-    background-size:     cover;                    
+    background-size:     cover;
     background-repeat:   no-repeat;
     background-position: top bottom;
     height: 100%;
@@ -1088,7 +1106,7 @@ svg.svg-inline--fa.fa-phone, svg.svg-inline--fa.fa-whatsapp {
 .accordion-button::after {
 
     background-image: url(/assets/images/plus-solid.svg);
-    
+
 }
 .accordion-button:not(.collapsed)::after {
     background-image: url(/assets/images/plus-solid.svg);
@@ -1150,7 +1168,7 @@ section.training-philisophy-section {
 }
 .about-welcome-image{
     background-image: url(/assets/images/for-faq.jpg);
-    background-size:     cover;                    
+    background-size:     cover;
     background-repeat:   no-repeat;
     background-position: top center;
     height:400px;
@@ -1167,7 +1185,7 @@ section.training-philisophy-section {
 
 .about-page-profile-image img{
     max-width: 100%;
-}  
+}
 .about-intro-section{
     display: flex;
 }
@@ -1211,10 +1229,10 @@ section.training-philisophy-section {
 }
 .content-service-page  p{
     word-spacing:4px;
-} 
+}
 .service-welcome-image {
     background-image: url(/assets/images/for-programs.jpg);
-    background-size:     cover;                    
+    background-size:     cover;
     background-repeat:   no-repeat;
     background-position: center center;
     height: 100%;
@@ -1223,7 +1241,7 @@ section.training-philisophy-section {
     justify-content: center;
     align-items: center;
 }
-@media (max-width:800px) { 
+@media (max-width:800px) {
     .ind-services-page:nth-child(even){
         flex-direction: column;
     }
@@ -1257,12 +1275,12 @@ h1.plan-pricing-page-heading, p.plan-pricing-page-content {
     .plan-pricing-page-main-div, .home-page-plan-main-div{
         flex-direction: column;
     }
-    
+
 }
 
 .plans-pricing-welcome-image{
     background-image: url(/assets/images/for-pricing.jpg);
-    background-size:     cover;                    
+    background-size:     cover;
     background-repeat:   no-repeat;
     background-position: top center;
     height:400px;
@@ -1333,7 +1351,7 @@ ul.contact-us-social-links {
     display: flex;
     justify-content: start;
     align-items: center;
-   
+
 }
 ul.contact-us-social-links > * {
 flex-basis:12%;
@@ -1363,7 +1381,7 @@ ul.contact-us-social-links svg{
     }
     ul.contact-us-social-links {
 justify-content: center;
-       
+
     }
 }
 
@@ -1387,7 +1405,7 @@ label.form-label {
     border: 1px solid var(--clr-grey);
     border-radius: 0.375rem;
     transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
-    
+
 }
 
 /* contact page */
@@ -1398,7 +1416,7 @@ label.form-label {
 
 .heading-faq {
     background-image: url(/assets/images/for-faq.jpg);
-    background-size:     cover;                    
+    background-size:     cover;
     background-repeat:   no-repeat;
     background-position: top bottom;
     height: 100%;
@@ -1531,7 +1549,7 @@ label.form-label {
     border: 1px solid var(--clr-grey);
     border-radius: 0.375rem;
     transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
-    
+
 }
 .form-text {
     margin-top: 0.25rem;
