--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@
     --clr-grey-2: hsl(0, 0%, 90%);
     --clr-grey-3: hsl(0, 0%, 80%);
     --clr-grey-4: hsl(204, 2%, 48%);
-    
+
     --clr-theme-1:hsl(200, 50%, 97%);
     --clr-theme-2:hsl(200, 50%, 80%);
     --clr-theme-3:hsl(200, 76%, 71%);
@@ -191,9 +191,7 @@ a.nav-link {
 }.container-fluid.header-contact-info {
     display: flex;
     justify-content: space-between;
-    padding-block: 5px;
-    border-bottom: 1px var(--clr-white) solid;
-    font-size: 15px;
+    padding-block: 0.3rem;
 }
 a.mobile-header-logo {
     display: none;
@@ -273,12 +271,17 @@ div#navbar-collapse::before {
 }
 
 li.nav-item:last-child {
-    background-color:var(--clr-tertiary);
-    border-radius:10px;
-    padding-inline:10px;
+    background-color:var(--clr-theme-5);
+    border: 1px var(--clr-theme-5) solid;
+    border-radius:0.3rem;
+    padding-inline:0.75rem;
+    /* translate: 0em 0em; */
+    transition: translate 300ms ease-in-out;
 }
 li.nav-item:last-child:hover {
-    background-color:var(--clr-primary);
+    background-color:var(--clr-theme-4);
+    translate: 0em -0.25em;
+    /* box-shadow: 5px 5px 5px 0px var(--clr-theme-5); */
 }
 @media (max-width:992px) {
     li.nav-item:last-child {
@@ -381,7 +384,7 @@ svg.header-logo {
 /* header */
 
 /* footer style */
-.copyright {
+.copyright-section {
     text-align: center;
 }
 .footer-logo-img {
@@ -440,6 +443,9 @@ padding-block: 5rem;
     font-size: 7rem;
     font-weight: 700 ;
 }
+.header-contact-info {
+    font-size: 1rem;
+}
 @media (max-width: 800px) {
     .home-page-welcome-section{
         position: relative;
@@ -472,9 +478,10 @@ padding-block: 5rem;
     width: clamp(18.75rem, 100%, 31.25rem);
 }
 .home-page-welcome-image img{
-    /* height: 70vh; */
     text-align: center;
     max-width: 100%;
+    width: 90%;
+    margin-inline: auto 0;
 }
 
 
@@ -534,6 +541,7 @@ ol.home-page-about-benefit li {
 }
 .home-page-about-image img{
     max-width: 100%;
+    width: 90%;
 }
 @media (max-width:800px) {
     .home-page-about-main-div{
@@ -666,14 +674,14 @@ section + section{
 
     padding-block: 50px;
 }
-section:nth-child(even){
+/* section:nth-child(even){
     background-color: hsl(199, 96%, 97%);
-}
+} */
 
 /* faq section */
 .faq-row {
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
 }
 .faq-row div{
     flex-basis: 100%;
@@ -688,7 +696,7 @@ h2.faq-heading {
 }
 .single-accordion-item {
     margin: 1rem;
-    box-shadow: 0px 0px 3px 1px var(--clr-primary);
+    box-shadow: 0px 0px 3px 1px var(--clr-theme-3);
 }
 
 .single-accordion-button {
@@ -702,7 +710,8 @@ h2.faq-heading {
     border: 0;
     border-radius: 0;
     overflow-anchor: none;
-    color: var(--clr-primary);
+    color: var(--clr-black);
+    line-height: 1.5em;
 }
 .single-accordion-button:after {
     flex-shrink: 0;
@@ -717,13 +726,13 @@ h2.faq-heading {
     transition: transform 0.3s ease-in-out;
 }
 .single-accordion-button:not(.collapsed)::after {
-    /* background-image: url(/assets/images/hamburger-close.svg); */
     transform: rotate(-135deg);
     transition: transform 0.3s ease-in-out;
 }
 .single-accordion-body{
-    padding: 16px 20px;
+    padding: 1rem 1.25rem;
 }
+
 @media (max-width:800px) {
     .faq-row {
         flex-direction:column;
@@ -743,16 +752,15 @@ h2.faq-heading {
 a.backToTopBtn {
     display: none;
     position: fixed;
-    bottom: 140px;
-    right: 20px;
-    background-color: var(--clr-tertiary);
-    color: #fff;
+    bottom: 5vh;
+    right: 2vw;
+    background-color: var(--clr-theme-5);
     border: none;
     border-radius: 50%;
-    padding: 10px;
+    padding: 0.75em;
     cursor: pointer;
-    width: 50px;
-    height: 50px;
+    width: 3rem;
+    height: 3rem;
     text-align: center;
   }
 
@@ -760,7 +768,7 @@ a.backToTopBtn {
     scroll-behavior: smooth;
   }
 a.backToTopBtn:hover,a.backToTopBtn:active {
-    background-color: var(--clr-primary);
+    background-color: var(--clr-theme-4);
 }
 
 
@@ -967,11 +975,10 @@ div.home-page-get-started-form
 {
     display: block;
     text-align: center;
-    border: 2px #98e2ff solid;
     border-radius: 10px;
-    background: var(--clr-secondary);
-    padding: 42px;
-    box-shadow: 0px 10px 50px hsla(240,7%,62%,1);
+    background: var(--clr-theme-3);
+    padding: 3rem;
+    box-shadow: 0px 10px 50px var(--clr-grey-3);
 }
 div.home-page-get-started-form form
 {
@@ -990,7 +997,7 @@ div.home-page-get-started-form form
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
-    color: var(--clr-white);
+    color: var(--clr-black);
     -webkit-appearance: none;
     -moz-appearance: none;
     background-color: var(--clr-white);
@@ -1005,6 +1012,9 @@ div.home-page-get-started-form form
 }
 .form-submit-button button {
     margin-block: 2rem;
+}
+.you_goal_help{
+    color: var(--clr-grey-4);
 }
 /* get started section */
 
@@ -1060,6 +1070,7 @@ text-align:center;
     gap: 2rem;
     justify-content: space-evenly;
     text-align: center;
+
 }
 .ind-services{
     flex: 1;
@@ -1069,7 +1080,8 @@ text-align:center;
 }
 .ind-services {
    margin-bottom:2rem;
-   background-color: hsl(197.14deg 100% 87.53%);
+   background-color: var(--clr-theme-3);
+   /* color: var(--clr-white); */
    padding: 1rem;
 }
 
@@ -1385,10 +1397,6 @@ justify-content: center;
     }
 }
 
-label.form-label {
-    display: inline-block;
-}
-
 .form-control {
     display: block;
     width: 100%;
@@ -1451,8 +1459,8 @@ label.form-label {
     cursor: pointer;
 }
 .single-accordion-button:not(.collapsed){
-    background-color: var(--clr-secondary);
-    color: var(--clr-surface);
+    background-color: var(--clr-theme-3);
+    color: var(--clr-white);
     }
 .accordion-content {
     padding: 0rem 1.25rem;
@@ -1496,9 +1504,6 @@ label.form-label {
 /* faq page */
 
 /* get started page */
-.get-started-heading{
-    text-align: center;
-}
 .get-started-container {
     display:flex;
     align-items: flex-start;
@@ -1585,7 +1590,7 @@ label.form-label {
 
 
 
-/* 
+/*
 //////////////////////////////////////////////////////////////////////
 DESKTOP CSS
 //////////////////////////////////////////////////////////////////////
@@ -1632,7 +1637,7 @@ DESKTOP CSS
 /* DISCLAIMER PAGE */
 
 
-/* 
+/*
 //////////////////////////////////////////////////////////////////////
 RESPONSIVE CSS
 //////////////////////////////////////////////////////////////////////
