--- a/assets/css/base/base.css
+++ b/assets/css/base/base.css
@@ -337,8 +337,8 @@ a.anchor:hover, a.anchor:focus{
         color: var(--clr-white);
     }
 .btn {
-    /* display: inline-block; */
-    padding:0.75em 1.5em;
+    display: inline-block;
+    padding:0.5em 1.5em;
     background-color: var(--clr-theme-4);
     color: var(--clr-white);
     border:1px var(--clr-theme-4) solid;
@@ -348,7 +348,7 @@ a.anchor:hover, a.anchor:focus{
     /* transition: transform 200ms ease-in-out; */
     font-weight: 500;
 }
-.btn:hover, a.btn:hover {
+.btn:hover, .btn:focus {
     background-color: var(--clr-white);
     color: var(--clr-theme-4);
     /* transform: scale(1.05); */
