--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -448,7 +448,7 @@ padding-block: 5rem;
 }
 .home-page-welcome-name {
     margin-block: 0.5rem;
-    font-size: 7rem;
+    font-size: 4rem;
     font-weight: 700 ;
 }
 .header-contact-info {
@@ -488,14 +488,15 @@ padding-block: 5rem;
 .home-page-welcome-image img{
     text-align: center;
     max-width: 100%;
-    width: 90%;
+    /* width: 90%; */
     margin-inline: auto 0;
+    border-radius: 20px;
 }
 
 
 .home-page-welcome-quote{
     margin-top: 10px;
-    margin-bottom: 44px;
+    /* margin-bottom: 44px; */
 }
 .work-with-you {
     text-transform: uppercase;
